# AudioDelayTester

./: LICENSE  README.md  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
ndkaudiotest/: build.gradle.kts  proguard-rules.pro
ndkaudiotest/src/main/: AndroidManifest.xml
ndkaudiotest/src/main/assets/: bgm.pcm  sfx.pcm
ndkaudiotest/src/main/cpp/: CMakeLists.txt
ndkaudiotest/src/main/cpp/aaudio/: api.c
ndkaudiotest/src/main/cpp/include/: dtypes.h  locallib.h
ndkaudiotest/src/main/cpp/locallib/: asset.c
ndkaudiotest/src/main/cpp/sles/: api.c
ndkaudiotest/src/main/java/id/psw/ndkaudiotest/: Constants.kt  PlayerActivity.kt  SelectorActivity.kt
ndkaudiotest/src/main/java/id/psw/ndkaudiotest/backends/: AAudioBackend.kt  AudioBackendBase.kt  MediaPlayerBackend.kt  SLESBackend.kt
ndkaudiotest/src/main/java/id/psw/ndkaudiotest/views/: BackendSelectorItemView.kt  DelayAdjustView.kt  PlayerView.kt
ndkaudiotest/src/main/res/drawable/: arrow.xml  ic_banner_background.xml  ic_banner_foreground.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_foreground_base.xml
ndkaudiotest/src/main/res/layout/: delay_adjust_view.xml  player_activity.xml  selector_activity.xml  selector_item.xml
ndkaudiotest/src/main/res/mipmap-anydpi/: ic_launcher_banner.xml
ndkaudiotest/src/main/res/values/: player_view_style.xml  strings.xml
ndkaudiotest/src/main/res/values-in-rID/: strings.xml
ndkaudiotest/src/main/res/xml/: locale_cfg.xml
